--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,16 @@
 .animate-fade-in-up {
     animation: fadeInUp 0.2s ease-out forwards;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
